--- a/RestApi/app/css/index.css
+++ b/RestApi/app/css/index.css
@@ -2,6 +2,9 @@ body {
   min-height: 1000px;
   padding-top: 70px; }
 
+.hosts {
+  padding-left: 30px; }
+
 .analytics {
   margin-top: 10px; }
 
@@ -21,8 +24,6 @@ body {
   width: 100%; }
 
 .hosts-add {
-  position: relative;
-  top: -10px;
   padding-right: 0;
   font-size: 20px;
   color: #5cb85c;
@@ -31,12 +32,10 @@ body {
     color: #80c780;
     cursor: pointer; }
 
-.hosts-header {
-  margin-top: 20px; }
-  .hosts-header h4 {
-    position: relative;
-    bottom: 20px;
-    padding-left: 0; }
+.hosts-header h4 {
+  margin: 0;
+  position: relative;
+  padding-left: 0; }
 
 .table-title {
   font-size: 14px;
@@ -70,12 +69,34 @@ body {
 
 .panel-heading {
   padding: 16px 0px 26px 0; }
-  .panel-heading span.running {
+  .panel-heading b.running {
     color: green; }
-  .panel-heading span.partlyRunning {
+  .panel-heading b.partlyRunning {
     color: #5cb85c; }
-  .panel-heading span.pending {
+  .panel-heading b.pending {
     color: #f0ad4e; }
+  .panel-heading b.finished {
+    color: #337AB7; }
+
+.noDataContainer {
+  position: relative;
+  min-height: 200px;
+  border: 5px solid #eee;
+  border-radius: 6px;
+  margin-bottom: 5px; }
+
+.noDataContainer-title {
+  position: absolute;
+  width: 200px;
+  left: 50%;
+  top: 50%;
+  right: 0;
+  margin-left: -100px;
+  font-size: 16px;
+  font-weight: 600; }
+
+.noDataWrapper {
+  padding: 0 0 0 15px; }
 
 ::-webkit-scrollbar {
   width: 10px;
