--- a/RestApi/app/css/scss/main.scss
+++ b/RestApi/app/css/scss/main.scss
@@ -2,6 +2,9 @@ body {
   min-height: 1000px;
   padding-top: 70px;
 }
+.hosts {
+  padding-left: 30px;
+}
 .analytics {
   margin-top: 10px;
 }
@@ -24,8 +27,6 @@ body {
   width: 100%;
 }
 .hosts-add {
-  position: relative;
-  top: -10px;
   padding-right: 0;
   font-size: 20px;
   color: #5cb85c;
@@ -38,10 +39,9 @@ body {
 }
 
 .hosts-header {
-  margin-top: 20px;
   h4 {
+    margin: 0;
     position: relative;
-    bottom: 20px;
     padding-left: 0;
   }
 }
@@ -86,7 +86,7 @@ body {
 
 .panel-heading {
   padding: 16px 0px 26px 0;
-  span {
+  b {
     &.running {
       color: green;
     }
@@ -96,5 +96,29 @@ body {
     &.pending {
       color: #f0ad4e;
     }
+    &.finished {
+      color: #337AB7;
+    }
   }
+}
+.noDataContainer {
+  position: relative;
+  min-height: 200px;
+  border: 5px solid #eee;;
+  border-radius: 6px;
+  margin-bottom: 5px;
+}
+
+.noDataContainer-title {
+  position: absolute;
+  width: 200px;
+  left: 50%;
+  top: 50%;
+  right: 0;
+  margin-left: -100px;
+  font-size: 16px;
+  font-weight: 600;
+}
+.noDataWrapper {
+  padding: 0 0 0 15px;
 }
