--- a/RestApi/app/views/main.html
+++ b/RestApi/app/views/main.html
@@ -8,9 +8,7 @@
 	<div class="table-responsive col-md-6" ng-if="data.jobs.length" style="clear: both">
 		<div class="row jobs-header">
 			<span class="col-md-2 col-sm-2">Jobs</span>
-
-				<i class="glyphicon glyphicon-plus-sign jobs-add"></i>
-
+			<i class="glyphicon glyphicon-plus-sign jobs-add" ng-click="addJob()"></i>
 		</div>
 		<div class="table-title row">
 			<span class="col-md-1 col-sm-1">№</span>
