--- a/RestApi/app/css/index.css
+++ b/RestApi/app/css/index.css
@@ -32,7 +32,8 @@ body {
   padding-right: 0;
   font-size: 18px;
   color: #5cb85c;
-  text-align: left; }
+  text-align: left;
+  vertical-align: top; }
   .jobs-add:hover {
     color: #80c780;
     cursor: pointer; }
@@ -92,7 +93,8 @@ body {
 
 .noDataContainer-title {
   position: absolute;
-  width: 200px;
+  display: inline-block;
+  width: 220px;
   left: 50%;
   top: 50%;
   right: 0;
